Pushing to prod
All changes should be in place?

--- a/drafts/marblehead-and-put-in-bay.html
+++ b/drafts/marblehead-and-put-in-bay.html
@@ -24,6 +24,8 @@
 
   <link rel="stylesheet" type="text/css" href="../static/custom.css">
 
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="icon" href="favicon.png" type="image/x-icon">
 
 
   <link href="https://www.unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
@@ -33,13 +35,13 @@
  
 
 <meta name="author" content="The Unbound Nomad" />
-<meta name="description" content="Marblehead &amp; Put-in-Bay 35 mi 1h Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of the Great Lakes. The lighthouse …" />
+<meta name="description" content="35 mi 1h Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of the Great Lakes. The lighthouse is a …" />
 <meta name="keywords" content="Motorcycles, Lifestyle">
 
 
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:title" content="Marblehead &amp; Put-in-Bay"/>
-  <meta property="og:description" content="Marblehead &amp; Put-in-Bay 35 mi 1h Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of the Great Lakes. The lighthouse …"/>
+  <meta property="og:description" content="35 mi 1h Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of the Great Lakes. The lighthouse is a …"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="../drafts/marblehead-and-put-in-bay.html"/>
   <meta property="og:type" content="article"/>
@@ -49,7 +51,7 @@
   <meta property="article:section" content="Blog"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
-  <meta property="og:image" content="theme/img/logo.png">
+  <meta property="og:image" content="/images/logo.png">
 
   <title>The Unbound Nomad &ndash; Marblehead &amp; Put-in-Bay</title>
 
@@ -60,7 +62,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="theme/img/logo.png" alt="" title="">
+      <img src="/images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -100,7 +102,7 @@
             <li>
               <a target="_self"
                  href="../pages/index.html#index">
-                Home
+                The Unbound Nomad
               </a>
             </li>
             <li>
@@ -160,8 +162,7 @@
 
 
   <div>
-    <h1>Marblehead &amp; Put-in-Bay</h1>
-<p>35 mi 
+    <p>35 mi 
 1h 
 Marblehead is a village in Ottawa County, Ohio. Sitting at the tip of the Marblehead Peninsula, which divides Lake Erie proper from Sandusky Bay. Marblehead is home to the Marblehead Lighthouse, the oldest continuously-operating lighthouse on the American side of the Great Lakes. The lighthouse is a part of the Marblehead Lighthouse State Park located within the village. Marblehead is also home to a United States Coast Guard station. Nearby, in Sandusky Bay, is Johnson's Island, a former Confederate officer prisoner of war camp during the Civil War.</p>
 <p>8mi 
@@ -210,8 +211,8 @@ Put-in-Bay is an Ohio village on South Bass Island in Lake Erie. Perry's Victory
         </a>
 
         <ul class="un-links">
-          <li><a href="../">Home</a></li>
-          <li><a href="../blog/index.html">Blog</a></li>
+          <li><a href="../pages/index.html">Home</a></li>
+          <li><a href="../">Blog</a></li>
           <li><a href="../pages/about.html">About</a></li>
           <li><a href="../pages/contact.html">Contact</a></li>
         </ul>
@@ -237,7 +238,7 @@ Put-in-Bay is an Ohio village on South Bass Island in Lake Erie. Perry's Victory
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "theme/img/logo.png",
+  "image": "/images/logo.png",
   "description": ""
 }
 </script>
