--- a/drafts/peak-to-peak-scenic-byway.html
+++ b/drafts/peak-to-peak-scenic-byway.html
@@ -24,6 +24,8 @@
 
   <link rel="stylesheet" type="text/css" href="../static/custom.css">
 
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="icon" href="favicon.png" type="image/x-icon">
 
 
   <link href="https://www.unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
@@ -33,13 +35,13 @@
  
 
 <meta name="author" content="The Unbound Nomad" />
-<meta name="description" content="Peak to Peak Scenic Byway Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National Park, Golden …" />
+<meta name="description" content="Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National Park, Golden Gate Canyon State Park, Arapaho …" />
 <meta name="keywords" content="Motorcycles, Lifestyle">
 
 
   <meta property="og:site_name" content="The Unbound Nomad"/>
   <meta property="og:title" content="Peak to Peak Scenic Byway"/>
-  <meta property="og:description" content="Peak to Peak Scenic Byway Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National Park, Golden …"/>
+  <meta property="og:description" content="Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National Park, Golden Gate Canyon State Park, Arapaho …"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content="../drafts/peak-to-peak-scenic-byway.html"/>
   <meta property="og:type" content="article"/>
@@ -49,7 +51,7 @@
   <meta property="article:section" content="Blog"/>
   <meta property="article:tag" content="Motorcycles"/>
   <meta property="article:tag" content="Lifestyle"/>
-  <meta property="og:image" content="theme/img/logo.png">
+  <meta property="og:image" content="/images/logo.png">
 
   <title>The Unbound Nomad &ndash; Peak to Peak Scenic Byway</title>
 
@@ -60,7 +62,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="theme/img/logo.png" alt="" title="">
+      <img src="/images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -100,7 +102,7 @@
             <li>
               <a target="_self"
                  href="../pages/index.html#index">
-                Home
+                The Unbound Nomad
               </a>
             </li>
             <li>
@@ -160,8 +162,7 @@
 
 
   <div>
-    <h1>Peak to Peak Scenic Byway</h1>
-<p>Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National Park, Golden Gate Canyon State Park, Arapaho and Roosevelt National Forests, the Indian Peaks Wilderness Area, Eldora Ski Resort - combine recreation with nature preservation. The gravel roads criss-crossing the main highway lead to high-country lakes, trailheads, campgrounds, the Moffat Tunnel's east portal, and ghost towns at Hesse and Apex. Established in 1918 this is Colorado's oldest scenic byway.</p>
+    <p>Welcome to the showcase of the Front Range. Less than an hour from Denver, Boulder, or Fort Collins, this 55-mile-long route provides matchless views of the Continental Divide and its timbered approaches. The string of popular attractions along the way - Rocky Mountain National Park, Golden Gate Canyon State Park, Arapaho and Roosevelt National Forests, the Indian Peaks Wilderness Area, Eldora Ski Resort - combine recreation with nature preservation. The gravel roads criss-crossing the main highway lead to high-country lakes, trailheads, campgrounds, the Moffat Tunnel's east portal, and ghost towns at Hesse and Apex. Established in 1918 this is Colorado's oldest scenic byway.</p>
 <hr>
 <h2>Interested in This Ride?</h2>
 <p style="margin:1rem 0 1.25rem 0;">
@@ -205,8 +206,8 @@
         </a>
 
         <ul class="un-links">
-          <li><a href="../">Home</a></li>
-          <li><a href="../blog/index.html">Blog</a></li>
+          <li><a href="../pages/index.html">Home</a></li>
+          <li><a href="../">Blog</a></li>
           <li><a href="../pages/about.html">About</a></li>
           <li><a href="../pages/contact.html">Contact</a></li>
         </ul>
@@ -232,7 +233,7 @@
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "theme/img/logo.png",
+  "image": "/images/logo.png",
   "description": ""
 }
 </script>
