--- a/pages/index.html
+++ b/pages/index.html
@@ -24,6 +24,8 @@
 
   <link rel="stylesheet" type="text/css" href="../static/custom.css">
 
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="icon" href="favicon.png" type="image/x-icon">
 
 
   <link href="https://www.unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
@@ -40,11 +42,11 @@
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=".."/>
-  <meta property="og:image" content="theme/img/logo.png">
+  <meta property="og:image" content="/images/logo.png">
 
 
 
-  <title>The Unbound Nomad &ndash; Home</title>
+  <title>The Unbound Nomad &ndash; The Unbound Nomad</title>
 
 
 </head>
@@ -53,7 +55,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="theme/img/logo.png" alt="" title="">
+      <img src="/images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -93,7 +95,7 @@
             <li>
               <a target="_self"
                  href="../pages/index.html#index">
-                Home
+                The Unbound Nomad
               </a>
             </li>
             <li>
@@ -144,7 +146,7 @@
 <article class="single">
   <header>
     
-    <h1 id="index">Home</h1>
+    <h1 id="index">The Unbound Nomad</h1>
   </header>
   <div>
 <p style="text-align:center; margin-bottom:1.5rem;">
@@ -283,8 +285,8 @@ If you ride and want to join part (or all) of this historic run, the full detail
         </a>
 
         <ul class="un-links">
-          <li><a href="../">Home</a></li>
-          <li><a href="../blog/index.html">Blog</a></li>
+          <li><a href="../pages/index.html">Home</a></li>
+          <li><a href="../">Blog</a></li>
           <li><a href="../pages/about.html">About</a></li>
           <li><a href="../pages/contact.html">Contact</a></li>
         </ul>
@@ -310,7 +312,7 @@ If you ride and want to join part (or all) of this historic run, the full detail
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "theme/img/logo.png",
+  "image": "/images/logo.png",
   "description": ""
 }
 </script>
