--- a/pages/micro-adventures.html
+++ b/pages/micro-adventures.html
@@ -24,6 +24,8 @@
 
   <link rel="stylesheet" type="text/css" href="../static/custom.css">
 
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="icon" href="favicon.png" type="image/x-icon">
 
 
   <link href="https://www.unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
@@ -40,7 +42,7 @@
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=".."/>
-  <meta property="og:image" content="theme/img/logo.png">
+  <meta property="og:image" content="/images/logo.png">
 
 
 
@@ -53,7 +55,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="theme/img/logo.png" alt="" title="">
+      <img src="/images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -93,7 +95,7 @@
             <li>
               <a target="_self"
                  href="../pages/index.html#index">
-                Home
+                The Unbound Nomad
               </a>
             </li>
             <li>
@@ -265,8 +267,8 @@ When you reach out, tell me:
         </a>
 
         <ul class="un-links">
-          <li><a href="../">Home</a></li>
-          <li><a href="../blog/index.html">Blog</a></li>
+          <li><a href="../pages/index.html">Home</a></li>
+          <li><a href="../">Blog</a></li>
           <li><a href="../pages/about.html">About</a></li>
           <li><a href="../pages/contact.html">Contact</a></li>
         </ul>
@@ -292,7 +294,7 @@ When you reach out, tell me:
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "theme/img/logo.png",
+  "image": "/images/logo.png",
   "description": ""
 }
 </script>
