--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,6 +24,8 @@
 
   <link rel="stylesheet" type="text/css" href="../static/custom.css">
 
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="icon" href="favicon.png" type="image/x-icon">
 
 
   <link href="https://www.unboundnomad.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="The Unbound Nomad Atom">
@@ -40,7 +42,7 @@
   <meta property="og:description" content=""/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:url" content=".."/>
-  <meta property="og:image" content="theme/img/logo.png">
+  <meta property="og:image" content="/images/logo.png">
 
 
 
@@ -53,7 +55,7 @@
 <aside>
   <div>
     <a href="../">
-      <img src="theme/img/logo.png" alt="" title="">
+      <img src="/images/logo.png" alt="" title="">
     </a>
 
     <h1>
@@ -93,7 +95,7 @@
             <li>
               <a target="_self"
                  href="../pages/index.html#index">
-                Home
+                The Unbound Nomad
               </a>
             </li>
             <li>
@@ -154,14 +156,7 @@
   </a>
 </p>
 
-<h2>---</h2>
-<p>For booking rides, trip planning, or events, please use the Booking Form.</p>
-<p style="margin-top: 1rem;">
-  <a href="booking.html" class="un-btn">
-    👉 Go to Booking Form
-  </a>
-</p>
-
+<hr>
 <p>If you have general questions outside of ride planning, you can still reach me at:</p>
 <p><strong>unboundnomad@unboundnomad.com</strong></p>  </div>
 </article>
@@ -179,8 +174,8 @@
         </a>
 
         <ul class="un-links">
-          <li><a href="../">Home</a></li>
-          <li><a href="../blog/index.html">Blog</a></li>
+          <li><a href="../pages/index.html">Home</a></li>
+          <li><a href="../">Blog</a></li>
           <li><a href="../pages/about.html">About</a></li>
           <li><a href="../pages/contact.html">Contact</a></li>
         </ul>
@@ -206,7 +201,7 @@
   "@type" : "Blog",
   "name": " The Unbound Nomad ",
   "url" : "..",
-  "image": "theme/img/logo.png",
+  "image": "/images/logo.png",
   "description": ""
 }
 </script>
